syntax = "proto3";
package slg.combat.v1_1_0;

option go_package = "slg/v1_1_0/combat;combat";

import "slg-proto/v1.1.0/common/types.proto";

// æˆ˜æ–—è¯·æ±‚
message BattleRequest {
    string battle_id = 1;                    // æˆ˜æ–—ID
    string player_id = 2;                    // ç©å®¶ID
    BattleType battle_type = 3;              // æˆ˜æ–—ç±»å‹
    repeated string unit_ids = 4;            // å‚æˆ˜å•ä½IDåˆ—è¡¨
    slg.common.v1_1_0.Position target_pos = 5;   // ç›®æ ‡ä½ç½®
    int64 timestamp = 6;                     // è¯·æ±‚æ—¶é—´æˆ?
    
    // v1.1.0 æ–°å¢å­—æ®µ
    string formation_id = 7;                 // é˜µå‹ID
    map<string, int32> battle_settings = 8;  // æˆ˜æ–—è®¾ç½®
    repeated string preset_skills = 9;       // é¢„è®¾æŠ€èƒ½åˆ—è¡?
}

// æˆ˜æ–—å“åº”
message BattleResponse {
    string battle_id = 1;                    // æˆ˜æ–—ID
    BattleResult result = 2;                 // æˆ˜æ–—ç»“æœ
    repeated BattleUnit battle_units = 3;    // æˆ˜æ–—å•ä½çŠ¶æ€?
    BattleReward reward = 4;                 // æˆ˜æ–—å¥–åŠ±
    int32 duration_ms = 5;                   // æˆ˜æ–—æŒç»­æ—¶é—´(æ¯«ç§’)
    
    // v1.1.0 æ–°å¢å­—æ®µ
    BattleStatistics statistics = 6;        // æˆ˜æ–—ç»Ÿè®¡
    repeated string mvp_units = 7;           // MVPå•ä½åˆ—è¡¨
    string replay_data = 8;                  // å›æ”¾æ•°æ®
}

// æˆ˜æ–—çŠ¶æ€æ¨é€?
message BattleStatePush {
    string battle_id = 1;                    // æˆ˜æ–—ID
    uint64 frame_seq = 2;                    // å¸§åºåˆ—å·
    repeated BattleAction actions = 3;       // æœ¬å¸§åŠ¨ä½œåˆ—è¡¨
    BattlePhase phase = 4;                   // æˆ˜æ–—é˜¶æ®µ
    int64 timestamp = 5;                     // æœåŠ¡å™¨æ—¶é—´æˆ³
    
    // v1.1.0 æ–°å¢å­—æ®µ
    EnvironmentEffect environment = 6;       // ç¯å¢ƒæ•ˆæœ
    repeated string active_skills = 7;       // æ¿€æ´»æŠ€èƒ½åˆ—è¡?
}

// æˆ˜æ–—å•ä½
message BattleUnit {
    string unit_id = 1;                      // å•ä½ID
    string template_id = 2;                  // æ¨¡æ¿ID
    int32 hp = 3;                           // å½“å‰è¡€é‡?
    int32 max_hp = 4;                       // æœ€å¤§è¡€é‡?
    int32 mp = 5;                           // å½“å‰é­”æ³•å€?
    int32 max_mp = 6;                       // æœ€å¤§é­”æ³•å€?
    slg.common.v1_1_0.Position position = 7;     // ä½ç½®
    UnitStatus status = 8;                   // çŠ¶æ€?
    repeated UnitBuff buffs = 9;             // å¢ç›Š/å‡ç›Šæ•ˆæœ
    UnitStats stats = 10;                    // å•ä½å±æ€?
    
    // v1.1.0 æ–°å¢å­—æ®µ
    repeated string available_skills = 11;   // å¯ç”¨æŠ€èƒ½åˆ—è¡?
    int32 energy = 12;                      // èƒ½é‡å€?
    int32 max_energy = 13;                  // æœ€å¤§èƒ½é‡å€?
    UnitEquipment equipment = 14;           // è£…å¤‡ä¿¡æ¯
}

// æˆ˜æ–—åŠ¨ä½œ
message BattleAction {
    string action_id = 1;                    // åŠ¨ä½œID
    ActionType action_type = 2;              // åŠ¨ä½œç±»å‹
    string source_unit_id = 3;               // å‘èµ·å•ä½ID
    repeated string target_unit_ids = 4;     // ç›®æ ‡å•ä½IDåˆ—è¡¨
    int32 damage = 5;                        // ä¼¤å®³å€?
    int32 healing = 6;                       // æ²»ç–—å€?
    repeated string effect_ids = 7;          // è§¦å‘çš„æ•ˆæœIDåˆ—è¡¨
    slg.common.v1_1_0.Position target_pos = 8;   // ç›®æ ‡ä½ç½®
    
    // v1.1.0 æ–°å¢å­—æ®µ
    string skill_id = 9;                     // æŠ€èƒ½ID
    bool is_critical = 10;                   // æ˜¯å¦æš´å‡»
    float damage_multiplier = 11;            // ä¼¤å®³å€ç‡
    repeated string combo_skills = 12;       // è¿å‡»æŠ€èƒ?
}

// æˆ˜æ–—å¥–åŠ±
message BattleReward {
    int32 exp = 1;                          // ç»éªŒå€?
    int32 gold = 2;                         // é‡‘å¸
    repeated slg.common.v1_1_0.Item items = 3;   // ç‰©å“å¥–åŠ±
    int32 honor = 4;                        // è£èª‰å€?
    
    // v1.1.0 æ–°å¢å­—æ®µ
    int32 pvp_rating = 5;                   // PVPè¯„åˆ†å˜åŒ–
    repeated string achievements = 6;        // æˆå°±å¥–åŠ±
    int32 guild_contribution = 7;           // å…¬ä¼šè´¡çŒ®
}

// å•ä½å¢ç›Š/å‡ç›Šæ•ˆæœ
message UnitBuff {
    string buff_id = 1;                     // æ•ˆæœID
    BuffType buff_type = 2;                 // æ•ˆæœç±»å‹
    int32 duration = 3;                     // æŒç»­æ—¶é—´(ç§?
    int32 stack_count = 4;                  // å åŠ å±‚æ•°
    map<string, int32> effect_values = 5;   // æ•ˆæœæ•°å€?
    
    // v1.1.0 æ–°å¢å­—æ®µ
    string source_skill_id = 6;             // æ¥æºæŠ€èƒ½ID
    bool is_dispellable = 7;                // æ˜¯å¦å¯é©±æ•?
}

// å•ä½å±æ€?
message UnitStats {
    int32 attack = 1;                       // æ”»å‡»åŠ?
    int32 defense = 2;                      // é˜²å¾¡åŠ?
    int32 speed = 3;                        // é€Ÿåº¦
    int32 critical_rate = 4;                // æš´å‡»ç?åƒåˆ†æ¯?
    int32 critical_damage = 5;              // æš´å‡»ä¼¤å®³(åƒåˆ†æ¯?
    int32 accuracy = 6;                     // å‘½ä¸­ç?åƒåˆ†æ¯?
    int32 dodge = 7;                        // é—ªé¿ç?åƒåˆ†æ¯?
    
    // v1.1.0 æ–°å¢å­—æ®µ
    int32 magic_attack = 8;                 // é­”æ³•æ”»å‡»åŠ?
    int32 magic_defense = 9;                // é­”æ³•é˜²å¾¡åŠ?
    int32 penetration = 10;                 // ç©¿é€åŠ›
    int32 block = 11;                       // æ ¼æŒ¡ç?
}

// v1.1.0 æ–°å¢æ¶ˆæ¯ç±»å‹

// æˆ˜æ–—ç»Ÿè®¡
message BattleStatistics {
    int32 total_damage_dealt = 1;           // æ€»ä¼¤å®³è¾“å‡?
    int32 total_healing_done = 2;           // æ€»æ²»ç–—é‡
    int32 kills_count = 3;                  // å‡»æ€æ•?
    int32 deaths_count = 4;                 // æ­»äº¡æ•?
    int32 assists_count = 5;                // åŠ©æ”»æ•?
    map<string, int32> skill_usage = 6;     // æŠ€èƒ½ä½¿ç”¨ç»Ÿè®?
}

// ç¯å¢ƒæ•ˆæœ
message EnvironmentEffect {
    string effect_id = 1;                   // æ•ˆæœID
    EnvironmentType effect_type = 2;        // ç¯å¢ƒç±»å‹
    int32 duration = 3;                     // æŒç»­æ—¶é—´
    repeated string affected_units = 4;     // å—å½±å“å•ä½?
    map<string, float> effect_params = 5;   // æ•ˆæœå‚æ•°
}

// å•ä½è£…å¤‡
message UnitEquipment {
    string weapon_id = 1;                   // æ­¦å™¨ID
    string armor_id = 2;                    // æŠ¤ç”²ID
    string accessory_id = 3;                // é¥°å“ID
    repeated string enchantments = 4;       // é™„é­”æ•ˆæœ
}

// æšä¸¾å®šä¹‰
enum BattleType {
    BATTLE_TYPE_UNKNOWN = 0;
    BATTLE_TYPE_PVE = 1;                    // PVEæˆ˜æ–—
    BATTLE_TYPE_PVP = 2;                    // PVPæˆ˜æ–—
    BATTLE_TYPE_GUILD_WAR = 3;              // å…¬ä¼šæˆ?
    BATTLE_TYPE_ARENA = 4;                  // ç«æŠ€åœ?
    BATTLE_TYPE_RAID = 5;                   // å›¢é˜Ÿå‰¯æœ¬
    // v1.1.0 æ–°å¢
    BATTLE_TYPE_TOURNAMENT = 6;             // é”¦æ ‡èµ?
    BATTLE_TYPE_SIEGE = 7;                  // æ”»åŸæˆ?
}

enum BattleResult {
    BATTLE_RESULT_UNKNOWN = 0;
    BATTLE_RESULT_VICTORY = 1;              // èƒœåˆ©
    BATTLE_RESULT_DEFEAT = 2;               // å¤±è´¥
    BATTLE_RESULT_DRAW = 3;                 // å¹³å±€
    BATTLE_RESULT_TIMEOUT = 4;              // è¶…æ—¶
    // v1.1.0 æ–°å¢
    BATTLE_RESULT_SURRENDER = 5;            // æŠ•é™
}

enum BattlePhase {
    BATTLE_PHASE_UNKNOWN = 0;
    BATTLE_PHASE_PREPARING = 1;             // å‡†å¤‡é˜¶æ®µ
    BATTLE_PHASE_FIGHTING = 2;              // æˆ˜æ–—é˜¶æ®µ
    BATTLE_PHASE_ENDING = 3;                // ç»“æŸé˜¶æ®µ
    // v1.1.0 æ–°å¢
    BATTLE_PHASE_COOLDOWN = 4;              // å†·å´é˜¶æ®µ
}

enum UnitStatus {
    UNIT_STATUS_UNKNOWN = 0;
    UNIT_STATUS_IDLE = 1;                   // å¾…æœº
    UNIT_STATUS_MOVING = 2;                 // ç§»åŠ¨ä¸?
    UNIT_STATUS_ATTACKING = 3;              // æ”»å‡»ä¸?
    UNIT_STATUS_CASTING = 4;                // æ–½æ³•ä¸?
    UNIT_STATUS_STUNNED = 5;                // æ™•çœ©
    UNIT_STATUS_DEAD = 6;                   // æ­»äº¡
    // v1.1.0 æ–°å¢
    UNIT_STATUS_CHANNELING = 7;             // å¼•å¯¼ä¸?
    UNIT_STATUS_INVISIBLE = 8;              // éšèº«
}

enum ActionType {
    ACTION_TYPE_UNKNOWN = 0;
    ACTION_TYPE_MOVE = 1;                   // ç§»åŠ¨
    ACTION_TYPE_ATTACK = 2;                 // æ™®é€šæ”»å‡?
    ACTION_TYPE_SKILL = 3;                  // æŠ€èƒ½æ”»å‡?
    ACTION_TYPE_HEAL = 4;                   // æ²»ç–—
    ACTION_TYPE_BUFF = 5;                   // å¢ç›Š
    ACTION_TYPE_DEBUFF = 6;                 // å‡ç›Š
    // v1.1.0 æ–°å¢
    ACTION_TYPE_COMBO = 7;                  // è¿å‡»
    ACTION_TYPE_ULTIMATE = 8;               // ç»ˆææŠ€èƒ?
}

enum BuffType {
    BUFF_TYPE_UNKNOWN = 0;
    BUFF_TYPE_ATTACK_UP = 1;                // æ”»å‡»åŠ›æå?
    BUFF_TYPE_DEFENSE_UP = 2;               // é˜²å¾¡åŠ›æå?
    BUFF_TYPE_SPEED_UP = 3;                 // é€Ÿåº¦æå‡
    BUFF_TYPE_ATTACK_DOWN = 4;              // æ”»å‡»åŠ›é™ä½?
    BUFF_TYPE_DEFENSE_DOWN = 5;             // é˜²å¾¡åŠ›é™ä½?
    BUFF_TYPE_SPEED_DOWN = 6;               // é€Ÿåº¦é™ä½
    BUFF_TYPE_POISON = 7;                   // ä¸­æ¯’
    BUFF_TYPE_REGENERATION = 8;             // å›å¤
    // v1.1.0 æ–°å¢
    BUFF_TYPE_SHIELD = 9;                   // æŠ¤ç›¾
    BUFF_TYPE_REFLECT = 10;                 // åå°„
    BUFF_TYPE_IMMUNE = 11;                  // å…ç–«
}

// v1.1.0 æ–°å¢æšä¸¾
enum EnvironmentType {
    ENVIRONMENT_TYPE_UNKNOWN = 0;
    ENVIRONMENT_TYPE_FIRE_RAIN = 1;         // ç«é›¨
    ENVIRONMENT_TYPE_ICE_STORM = 2;         // å†°æš´
    ENVIRONMENT_TYPE_HEALING_SPRING = 3;    // æ²»ç–—ä¹‹æ³‰
    ENVIRONMENT_TYPE_MAGIC_FIELD = 4;       // é­”æ³•åœ?
}